--- a/src/landingPage.html
+++ b/src/landingPage.html
@@ -14,7 +14,7 @@
         <a href="#">Home</a>
 
         </div>
-        <script src="js/weather.js"></script>
+        <script src="./weather.js"></script>
 
     </div>
 
