--- a/src/myPlants.html
+++ b/src/myPlants.html
@@ -153,6 +153,6 @@
     </footer>
 
     <!-- Import module script -->
-    <script type="module" src="./js/myPlants.js"></script>
+    <script type="module" src="./PlantService.js"></script>
 </body>
 </html>
