--- a/src/login.html
+++ b/src/login.html
@@ -57,5 +57,4 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-<script src="auth.js"></script>
-<script src="login.js"></script>
+<script src="./AuthService.js"></script>
