--- a/src/userHomePage.html
+++ b/src/userHomePage.html
@@ -20,7 +20,7 @@
         <a href="userHomePage.html" class="active">Dashboard</a>
         <a href="myPlants.html">My Plants</a>
         <a href="chatbot_draft.html">AI Assistant</a>
-        <a href="#" id="logout-btn">Logout</a>
+        <a href="#" id="logout-btn" onclick="handleLogout()">Logout</a>
     </nav>
 
     <!-- Main Content Section -->
