--- a/src/landingPage.html
+++ b/src/landingPage.html
@@ -12,10 +12,7 @@
     <!-- Nav Bar -->
     <div class="navbar">
         <a href="#">Home</a>
-
         </div>
-        <script src="./weather.js"></script>
-
     </div>
 
     <!-- Content Section -->
@@ -52,42 +49,13 @@
             </div>
         </section>
 
-        <!-- <div id="weather-box-6" class="weather-box">
-            <h3 class="city-name"></h3>
-            <div class="temperature"></div>
-            <div class="description"></div>
-        </div>
-        <Repeat for each city with unique IDs as per the JavaScript -->
-
-        <!-- <section id="weather-section">
-            <h2>Get Weather</h2>
-            <form id="weather-form">
-                <label for="city">City:</label>
-                <input type="text" id="city" placeholder="Enter city">
-                <label for="state">State:</label>
-                <input type="text" id="state" placeholder="Enter state">
-                <label for="country">Country:</label>
-                <input type="text" id="country" placeholder="Enter country">
-                <button type="button" id="getWeatherBtn">Get Weather</button>
-            </form>
-
-            <div id="weather-details"></div>
-
-    </div> -->
-
     <!-- Footer -->
     <footer>
         <p>© 2024 Leaf Logic | All Rights Reserved</p>
     </footer>
 
     <!-- Load Scripts After Content -->
-    <script src="weather.js"></script> <!-- Weather script -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script type="module" src="./index.js"></script> <!-- Main application script -->
 
-    <script src="./auth.js"></script>
-    <script src="nav.js"></script>
-    <script src="../functions/index.js"></script>
 </body>
 </html>
